--- a/case-view/advice.html
+++ b/case-view/advice.html
@@ -150,6 +150,7 @@ title: EHC Hub
                 </div>
               </div>
               <div class="card-body px-6">
+                <p>Children and young people with speech, language and communication needs (SLCN) have difficulty in communicating with others. More information is provided at paragraphs 6.28-6.29 of the SEND Code of Practice.</p>
                 <div class="mb-5">
                   <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
@@ -188,21 +189,21 @@ title: EHC Hub
                   <label for="exampleFormControlTextarea10" class="form-label">Provision 1</label>
                   <textarea class="form-control" id="exampleFormControlTextarea10" rows="3" aria-label="Disabled input example">Riley will independently use a taught strategy (e.g., visual organiser + sentence frames) to contribute at least two relevant points in four out of five structured class discussions per fortnight across English, Science, and Humanities, evidenced by teacher tallies/work samples.</textarea>
                   <div class="row g-3 mt-1">
-                    <div class="col">
+                    <div class="col col-md-6">
                       <label for="providedBy" class="form-label">Provided by</label>
                       <input type="text" class="form-control" id="providedBy" aria-label="Provided by">
                     </div>
-                    <div class="col">
+                    <div class="col col-md-6">
                       <label for="ratio" class="form-label">Staff/student ratio</label>
                       <input type="text" class="form-control" id="ratio" aria-label="Ratio">
                     </div>
                   </div>
                   <div class="row g-3 mt-1">
-                    <div class="col">
+                    <div class="col col-md-6">
                       <label for="quantity" class="form-label">Quantity</label>
                       <input type="text" class="form-control" id="quantity" aria-label="Quantity">
                     </div>
-                    <div class="col">
+                    <div class="col col-md-6">
                       <label for="frequency" class="form-label">Frequency</label>
                       <input type="text" class="form-control" id="frequency" aria-label="Frequency">
                     </div>
@@ -228,6 +229,7 @@ title: EHC Hub
                 </div>
               </div>
               <div class="card-body px-6">
+                <p>Support for learning difficulties may be required when children and young people learn at a slower pace than their peers, even with appropriate differentiation. More information is provided at paragraphs 6.30-6.31 of the SEND Code of Practice.</p>
                 <div class="mb-5">
                   <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
@@ -259,6 +261,7 @@ title: EHC Hub
                 </div>
               </div>
               <div class="card-body px-6">
+                <p>Children and young people may experience a wide range of social, emotional and mental health difficulties which manifest themselves in many ways. These may include becoming withdrawn or isolated, or finding it hard to manage emotions. More information is provided at paragraphs 6.32-6.33 of the SEND Code of Practice.</p>
                 <div class="mb-5">
                   <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
@@ -290,6 +293,7 @@ title: EHC Hub
                 </div>
               </div>
               <div class="card-body px-6">
+                <p>Some children and young people require special educational provision because they have a disability which prevents or hinders them from making use of the educational facilities generally provided. More information is provided at paragraphs 6.34-6.35 of the SEND Code of Practice.</p>
                 <div class="mb-5">
                   <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
@@ -321,6 +325,7 @@ title: EHC Hub
                 </div>
               </div>
               <div class="card-body px-6">
+                <p>The child or young person’s health care needs which relate to their SEN.</p>
                 <div class="mb-5">
                   <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
@@ -352,6 +357,7 @@ title: EHC Hub
                 </div>
               </div>
               <div class="card-body px-6">
+                <p>Social care needs which relate to the SEN.</p>
                 <div class="mb-5">
                   <p class="required fw-500">Are you identifying a learning need in this area?</p>
                   <div class="form-check form-check-inline">
